<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="504dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/half_background" />

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="499dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">


        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            style="@style/HeaderStyle30"/>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="30dp"
            style="@style/SpanStyle"
            />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:autofillHints="username"
            android:inputType="text"
            android:hint="@string/enter_username"
            style="@style/InputStyle"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="10dp"
            style="@style/SpanStyle"
            />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            style="@style/InputStyle"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            style="@style/BlackText"
            android:textAlignment="textEnd"
            android:layout_marginTop="5dp"
            />

        <Button
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            style="@style/GreenButton"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/createAnAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_have"
            style="@style/BlackText"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>