<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="412dp"
        android:layout_height="360dp"
        android:layout_marginBottom="504dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/half_background" />

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="501dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_semi_bold"
            android:text="@string/sign_up"
            android:textColor="@color/black_font"
            android:textSize="30sp"

            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/username"
            android:textColor="@color/black_span"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="name"
            android:backgroundTint="@color/black_span"
            android:ems="10"
            android:fontFamily="@font/gilroy_regular"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:textColor="@color/black_font" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/email"
            android:textColor="@color/black_span"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/black_span"
            android:ems="10"
            android:fontFamily="@font/gilroy_regular"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black_font" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/password"
            android:textColor="@color/black_span"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="password"
            android:backgroundTint="@color/black_span"
            android:ems="10"
            android:fontFamily="@font/gilroy_regular"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/black_font" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/terms"
            android:textAlignment="center"
            android:textColor="@color/black_span"
            android:textSize="12sp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/gilroy_semi_bold"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/haveAnAccout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/gilroy_regular"
            android:text="@string/have_account"
            android:textAlignment="center"
            android:textColor="@color/black_span"

            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>