<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginBottom="10dp"
    android:layout_height="120dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cartItemImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/addToCart"
            android:layout_alignParentStart="true"
            android:layout_marginStart="1dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/apple" />

        <TextView
            android:id="@+id/cartItemName"
            style="@style/HeaderStyle30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="10dp"
            android:text="@string/item_name" />

        <TextView
            android:id="@+id/cartItemQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilo"
            android:layout_marginStart="120dp"
            style="@style/SpanStyle"
            android:layout_marginTop="50dp"

            />

        <TextView
            android:id="@+id/cartItemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_alignParentEnd="true"
            android:layout_marginVertical="60dp"
            android:layout_marginEnd="20dp"
            style="@style/HeaderStyle30"
            />
    </RelativeLayout>
</androidx.cardview.widget.CardView>