<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_image"
    tools:context=".Onboarding">

    <LinearLayout
        android:layout_width="339dp"
        android:layout_height="297dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/white_carrot"

            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_text_header"
            android:textColor="@color/white"
            android:fontFamily="@font/gilroy_semi_bold"
            android:textSize="40sp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_text"
            android:textAlignment="center"
            android:fontFamily="@font/gilroy_regular"
            android:textColor="@color/span_color"
            />

        <Button
            android:id="@+id/getStartedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            android:height="60dp"
            android:textSize="18sp"
            android:fontFamily="@font/gilroy_semi_bold"
            android:layout_marginTop="30dp"

            android:background="@drawable/button_border"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>