<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tabLayout" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/store_icon"
            android:backgroundTint="@color/primary"
            android:text="@string/shop" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/explore_icon"
            android:text="@string/explore" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/cart_icon"
            android:text="@string/cart" />
    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/cartItemQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:fontFamily="@font/gilroy_semi_bold"
        android:textSize="15sp"
        android:textColor="@color/light_green"
        android:layout_alignTop="@+id/tabLayout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        />

</RelativeLayout>