<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    app:cardCornerRadius="20dp"
    android:layout_marginEnd="20dp"
    android:layout_height="170dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/apple"
                android:contentDescription="@string/item_name" />

            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                style="@style/BlackText" />

            <TextView
                android:id="@+id/itemPieces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kilo"
                style="@style/SpanStyle"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            style="@style/HeaderStyle30"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"
             />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/add_icon"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_border"
            android:backgroundTint="@color/primary"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            />


    </RelativeLayout>


</androidx.cardview.widget.CardView>

<!--    android:layout_centerHorizontal="true"-->